app/assets/stylesheets/bootstrap_custom.css.scss
// A stylesheet for overriding bootstrap defaults

span.help-block
{
 margin-top: 0px;
}

div.checkbox-inner
{
  margin-bottom:0px;
}

a:hover
{
  text-decoration: none;
}

input[type="checkbox"]
{
 margin-top: 2px; 
}

// Customizations for navbar
.navbar
{
 box-shadow: 0px 0px 10px black; 
 border-bottom:1px solid black;
 margin-bottom:0px;
 background-color: rgb(17,17,51);
 font-size: 1.2em;
 height: 55px;
 
  @media screen and (min-width: 450px) {
    font-size: 9pt;
    padding: 0px 2px 0px 2px;
  }
  @media screen and (min-width: 1000px) {
    font-size: 11pt;
    padding: 0px 14px 0px 14px;
  }
  @media screen and (min-width: 1200px) {
    font-size: 12pt;
    padding: 0px 17px 0px 17px;
  }
  
  @each $mode in in, collapsing {
    .navbar-collapse.#{$mode}{
      border: none;
      background-color: rgb(17,17,51);
    }
  }
  
  .full
  {
    @media screen and (max-width: 449px) {
      display: none;
    }
    @media screen and (min-width: 450px) {
      display: none;
    }
    @media screen and (min-width: 1000px) {
      display:inline;
    }
  }
  .small
  {
    @media screen and (max-width: 449px) {
      display: inline;
    }
    @media screen and (min-width: 450px) {
      display: inline;
    }
    @media screen and (min-width: 1000px) {
      display: none;
    }
  }
 
 .navbar-brand
 {
  padding-top:8px; 
 }
 .nav > li > a
 {
  color: white;
 }
 .nav > li > a:hover
 {
  color: white;
 }
 .navbtn
 {
  a
  { 
    padding-top:20px;
  }
 }
 .navbtn:hover
 {
  background-color: #649ce5;
 }
 .dropdown-menu 
 { 
  background-color: white;
  color: black;
  margin-left:-1px;
  li > a
  {
    padding: 10px 15px;
  }
  li:hover > a
  {
    background-color: #649ce5;
    color: white;  
  }
 }
}

// Customization for modal footer
.modal
{
 padding-top:50px; 

 .modal-footer
 {
  padding: 5px 10px 15px; 
  margin-top: 0px;
 }
}

//"item" style for isotope blocks
.item
{
  margin:8px 8px 8px 8px;

  background-color: #e8e8e8;

     -moz-box-shadow: 0 2px 3px 1px #9E9E9E;
  -webkit-box-shadow: 0 2px 3px 1px #9E9E9E;
          box-shadow: 0 2px 3px 1px #9E9E9E;  

  @media screen and (max-width: 980px) {
    font-size:0.8em;
  }
  @media screen and (min-width: 1200px) {
    font-size:1em;
  }
  
  div.item_image
  {
    height:120px;
    background-position:center;
    background-repeat: no-repeat;
    background-size: 120%;
  }
  
  div.item_desc
  {
    padding:7px;
    
    div.item_title
    {
      font-size: 1.2em;
      font-weight: bold;
      span
      {
        color:#57C142;
      }
    }
    
    div.item_badges
    {
      display:table;
      width:100%;
      margin-top:10px;
      
      div:nth-child(1)
      {
        display:table-cell;
        text-align: left;
      }
      div:nth-child(2)
      {
        display:table-cell;
        text-align: center;
      }
      div:nth-child(3)
      {
        display:table-cell;
        text-align: right;
      }
    }
  }
}

// item style mods for front page
.item.front_page_item
{
  div.item_image
  {
    width:100%;
    background-size: 100%;
  }
  
  div.item_desc
  {
    
    div.item_title
    {
      word-wrap: break-word;
      overflow: hidden;
      height: 2.4em;
    }
  }
}

// style for dimming clickable items on hover
.clickable_item:hover
{
  background-color: #cfcfcf;
  
  div.item_image
  {
    opacity:0.6;
  }
}

// Helper for transparent image area link
.area_link
{
  float:right;
  width:100%;
  height:100%;
  position:absolute;
  z-index:1000;
  cursor:pointer;
}

//=========Unverified CSS===========================
i[class*='icon-']
{
  color:black;

}

i.icon-white
{
    color: white !important;
}

.hero-unit
{
  text-align: center;
  padding: 20px 40px;
  border-style: groove;
  border-color: #ffffff;
  border-width: 1px;
  box-shadow: 0px 0px 5px grey;
}

.footer
{
  text-align: center;
  border-style: groove;
  border-color: #ffffff;
  border-width: 1px;
  /*box-shadow: 0px 0px 5px grey;*/
  padding: 15px 0px;

  background-color: #e8e8e8;

  border-style: groove;
  border-color: #ffffff;
  border-width: 2px 0px 0px 0px;

  width: 100%;
  height: 60px;
}

.sub-hero
{
  padding: 5px 20px;
  background-color: #f8f8f8;
  box-shadow: 0px 0px 5px grey;
}

.content-block
{
  padding: 10px 20px;
  background-color: #f8f8f8;
  border-style: groove;
  border-color: #ffffff;
  border-width: 2px;
  -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
          border-radius: 6px;
}

.feed-top
{
  padding: 2px 20px 2px 20px;
  background-color: #e8e8e8;
  color: #000000;

  border-style: groove;
  border-color: #ffffff;
  border-width: 2px 2px 0px 2px;

  margin-top: 0px;

  -webkit-border-radius: 6px 6px 0px 0px;
     -moz-border-radius: 6px 6px 0px 0px;
          border-radius: 6px 6px 0px 0px;
}

.innerItem
{
  padding: 0px;
  background-color: #e8e8e8;
  color: #000000;

  border-style: groove;
  border-color: #ffffff;
  border-width: 2px 2px 2px 2px;

  margin-top: 0px;

  -webkit-border-radius: 6px 6px 6px 6px;
     -moz-border-radius: 6px 6px 6px 6px;
          border-radius: 6px 6px 6px 6px;
}

.feed-bottom
{
  padding-top: 0px;
  margin: 0px;
  background-color: #e8e8e8;
  border-top: 2px groove #ffffff;

  border-style: groove;
  border-color: #ffffff;
  border-width: 2px 2px 2px 2px;

  color: #000;
  text-align: center;
  height: 35px;
  -webkit-border-radius: 0px 0px 6px 6px;
     -moz-border-radius: 0px 0px 6px 6px;
          border-radius: 0px 0px 6px 6px;
}

.feed-odd
{
  padding: 2px 5px 2px 5px;
  margin: 0px;
  /*background-color: #ffffff;*/

  border-style: solid;
  border-color: #CCC;
  border-width: 1px 0px 0px 0px;
}

.feed-even
{
  padding: 2px 5px 2px 5px;
  margin: 0px;
  background-color: #f7f7f7;

  border-style: solid;
  border-color: #CCC;
  border-width: 1px 0px 0px 0px;
}

.mainContent
{
  margin-bottom: 18px;

  -webkit-border-radius: 0px 0px 6px 6px;
     -moz-border-radius: 0px 0px 6px 6px;
          border-radius: 0px 0px 6px 6px;
}

.field_table td
{
  padding: 2px;
}

.field_table th
{
  padding: 2px;
  border-top: 0px;
}

/*This is a fix for dropdown menus being disallowed overflowing off accordians.*/
.collapse.in
{
  overflow: visible !important;
}

.table-striped tbody > tr:nth-child(odd) > td,
.table-striped tbody > tr:nth-child(odd) > th {
  background-color: #EEE;
}

.carousel-indicators
{
  top: 15px;
  li {
    border: none;
  }
  .active 
  {
    background-color: transparent;
  }
}

